# Lie-Algebra-for-Hamiltonian-Simulation

./: README.md  index.html  liegpt_efficiency_robustness.ipynb  requirements.txt
.mplconfig/: fontlist-v390.json
_quarantine_synthetic_DO_NOT_SUBMIT/: README.md  generate_liegpt_figures.py  liegpt_efficiency_robustness.ipynb  liegpt_stability.ipynb
notebooks/: liegpt_architecture_unitarity.html  liegpt_architecture_unitarity.ipynb  liegpt_efficiency_robustness.html  liegpt_efficiency_robustness.ipynb  liegpt_stability.html  liegpt_stability.ipynb
outputs/: README.txt  generation_log.txt
research_paper/: liegpt_refs.bib  main.aux  main.bbl  main.tex  recent_conference_generated.bib  refs.bib
results/: driven_case_search_results.csv  driven_selected_results.csv  driven_tfim_sweep_results.csv  static_case_search_results.csv  static_selected_results.csv  tfim_baseline_results.csv  tfim_sweep_results.csv
scripts/: driven_tfim_sweep.py  generate_liegpt_figures.py  generate_paper_figures.py  longtime_benchmark.py  plot_driven_tfim_sweep.py  plot_selected_results.py  plot_tfim_sweep.py  tfim_sweep.py  (+3 more)
submission/code/: CITATION.cff  LICENSE  README.md  README.txt  THEORY.txt  cli.py  common.py  determinism.py  fixed_time.py  foundations.py  generator_scaling.py  headline.py  higher_order_frontier.py  learned_residual.py  make_all.py  multiseed_residual.py  oracle_free_q4.py  overview.py  parameter_heatmap.py  projected_residual.py  pyproject.toml  requirements.txt  spectral_truncation.py  theory.py  time_sweep.py  validate_submission.py
submission/code/.mplconfig/: fontlist-v390.json
submission/code/generated_data/: certificate_selection.csv  certificate_selection.json  compiled_faithfulness.csv  compiled_faithfulness.json  experiment_manifest.csv  experiment_manifest.json  faithful_compilation.csv  faithful_compilation.json  faithful_compilation.meta.json  fig1_local_error.csv  fig1_local_error.json  fig2_n6.csv  fig2_n6.json  fig3_global.csv  fig3_global.json  fig4_random.csv  fig4_random.json  fig5_longtime_gpt1.csv  fig5_longtime_gpt1.json  fig6_longtime_gpt2.json  fig7_time_ratio.csv  fig7_time_ratio.json  fixed_time_errors.csv  fixed_time_errors.json  fixed_time_errors.meta.json  frontier_cnot.csv  frontier_cnot.json  frontier_cnot.meta.json  generator_energy_n5_q2.json  generator_order_scaling.csv  generator_order_scaling.json  generator_scaling.meta.json  learned_residual.meta.json  learned_residual_dtsweep.csv  learned_residual_dtsweep.json  learned_residual_multiseed.meta.json  learned_residual_multiseed_dtsweep.csv  learned_residual_multiseed_dtsweep.json  learned_residual_multiseed_sizes.csv  learned_residual_multiseed_sizes.json  (+34 more)
submission/code/generated_data_committed_backup/: fixed_time_errors.meta.json  generator_order_scaling.csv  generator_scaling.meta.json  learned_residual.meta.json  learned_residual_dtsweep.csv  learned_residual_dtsweep.json  learned_residual_parity.csv  learned_residual_sizes.csv  learned_residual_sizes.json  learned_residual_steps.csv  learned_residual_steps.json  parameter_heatmap_n4_q2_w3.meta.json  time_sweep_n4_q2.meta.json
submission/code/lieideal_hs/: __init__.py  reproduce.py
submission/code/lieideal_hs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+30 files in other folders)
