[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lieideal-hs"
version = "1.0.0"
description = "Residual-Generator Trotter Compilation (RGTC): deterministic, provable, size-transferable operator learning of Trotter corrections for Hamiltonian simulation."
readme = { text = "Residual-Generator Trotter Compilation code artifact. Run python make_all.py and python validate_submission.py; see foundations.py for the from-scratch theory-to-code map.", content-type = "text/plain" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Molena Huynh" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
lieideal-reproduce = "cli:main"
lieideal-verify = "cli:verify"

[tool.setuptools]
py-modules = [
  "common",
  "fixed_time",
  "generator_scaling",
  "foundations",
  "headline",
  "learned_residual",
  "make_all",
  "projected_residual",
  "theory",
  "time_sweep",
  "determinism",
  "cli",
  "validate_submission",
]
