[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lieideal-hs"
version = "1.0.0"
description = "Residual-Generator Trotter Compilation (RGTC): deterministic, provable, size-transferable operator learning of Trotter corrections for Hamiltonian simulation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Molena Huynh", email = "molena.huynh@jmp.com" }]
maintainers = [{ name = "Molena Huynh", email = "molena.huynh@jmp.com" }]
keywords = [
  "hamiltonian-simulation",
  "trotter-suzuki",
  "product-formula",
  "lie-algebra",
  "operator-learning",
  "quantum-computing",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0"]

[project.urls]
Homepage = "https://github.com/thmolena/Lie-Algebra-for-Hamiltonian-Simulation"
Repository = "https://github.com/thmolena/Lie-Algebra-for-Hamiltonian-Simulation"

[project.scripts]
lieideal-reproduce = "cli:main"
lieideal-verify = "cli:verify"

[tool.setuptools]
packages = ["lieideal_hs"]
py-modules = [
  "common",
  "fixed_time",
  "generator_scaling",
  "foundations",
  "headline",
  "learned_residual",
  "make_all",
  "overview",
  "projected_residual",
  "spectral_truncation",
  "higher_order_frontier",
  "oracle_free_q4",
  "multiseed_residual",
  "theory",
  "time_sweep",
  "determinism",
  "cli",
  "validate_submission",
]
